--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!--
 Copyright 2017 Git.Training
-Adding changes before rebasing conflicts
+Some silly changes from the master branch
 -->
 <head>
-	<title>A Very Respectful Website</title>
+	<title>Silly Changes on the Master Branch</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,8 +16,10 @@ Adding changes before rebasing conflicts
 </head>
 <body>
 	<main class="container">
-	<!-- Content Goes Here -->
+	<!-- Junk filler content -->
 		<p>
+			Just stuff for now,
+			Not sure if we would replace this or not
 		</p>
 	</main>
 	<footer class="container">
