--- a/simple.html
+++ b/simple.html
@@ -21,6 +21,7 @@ Copyright 2017 Git.Training
 		</p>
 	</main>
 	<footer class="container">
+		<p>&copy; 1024 Git.Training.  All rights reserved</p>
 	</footer>
 </body>
 </html>
